# finm_projects

./: .gitignore  README.md
finmclassproject1/: CMakeLists.txt  main.cpp  my_functions.cpp  my_functions.h  my_unit_test.cpp  my_unit_test.h
finmclassproject2/: CMakeLists.txt  main.cpp  my_functions.cpp  my_functions.h  my_unit_test.cpp  my_unit_test.h
finmclassproject3/: CMakeLists.txt  main.cpp  my_classes.cpp  my_classes.h
finmclassproject4/: CMakeLists.txt  main.cpp  my_classes.cpp  my_classes.h  my_functions.cpp  my_functions.h  my_unit_test.cpp
finmclassproject5/: main.cpp  my_classes.cpp  my_classes.h  my_functions.cpp
finmclassproject6/: AppBase.cpp  AppBase.h  BookUpdate.h  MarketSimulator.cpp  MarketSimulator.h  Order.h  OrderManager.cpp  OrderManager.h  TradingStrategy.cpp  TradingStrategy.h  main.cpp  my_unit_test.h
finmclassproject7/: AppBase.h  BookBuilder.h  BookUpdate.h  CMakeLists.txt  MDReader.h  MarketSimulator.cpp  MarketSimulator.h  Order.cpp  Order.h  OrderManager.cpp  OrderManager.h  TradingStrategy.cpp  TradingStrategy.h  main.cpp
